--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Routing Application (back-end)</title>
-  <meta name="description" content="">
+  <title>Course 3 of Java Object-Oriented Design of Data Structures Specialization by UCSD - Coursera</title>
+  <meta name="description" content="https://www.coursera.org/specializations/java-object-oriented">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,50 +22,43 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Routing Application (back-end)</h1>
+      <h1 class="title">Course 3 of Java Object-Oriented Design of Data Structures Specialization by UCSD - Coursera</h1>
+      <h2>Advanced Data Structures in Java</h2>
     </header>
     <div id="container">
-      <p class="tagline"></p>
+      <p class="tagline">https://www.coursera.org/specializations/java-object-oriented</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD" class="code">View Routing Application (back-end) on GitHub</a>
+          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD" class="code">View Course 3 of Java Object-Oriented Design of Data Structures Specialization by UCSD - Coursera on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a id="text-editor" class="anchor" href="#text-editor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Routing Application (back-end)</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>This project was a part of the Java Object-Oriented Design of Data Structures Specialization by UCSD on Coursera. This Specialization covers intermediate topics in software development, including implementation of data structures and algorithms for organizing large amounts of data in a way that is both efficient and easy to work with. </p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2><a id="summary" class="anchor" href="#summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h2>
+<p>The application uses street data to identify the shortest path between two intersections via different graph search algorithms.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<video height="600" width="628" autoplay>
+  <source src="../Advanced-Data-Structures-in-Java-UCSD/video/proj2.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2><a id="source-code" class="anchor" href="#source-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Source code</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p><a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD">https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD</a></p>
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/veronikabenkeser" class="avatar"><img src="https://avatars2.githubusercontent.com/u/11280159?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/veronikabenkeser">veronikabenkeser</a> maintains <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD">Routing Application (back-end)</a></p>
+      <p><a href="https://github.com/veronikabenkeser" class="avatar"><img src="https://avatars2.githubusercontent.com/u/11280159?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/veronikabenkeser">veronikabenkeser</a> maintains <a href="https://github.com/veronikabenkeser/Data-structures-Measuring-and-Optimizing-Performance-Java-UCSD">Course 3 of Java Object-Oriented Design of Data Structures Specialization by UCSD - Coursera</a></p>
 
 
       </div>
@@ -76,10 +69,11 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD/tarball/master" class="tar">tar</a><a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/veronikabenkeser/Data-structures-Measuring-and-Optimizing-Performance-Java-UCSD" class="tar">tar</a><a href="https://github.com/veronikabenkeser/Advanced-Data-Structures-in-Java-UCSD" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
   
 </body>
 </html>
+
